# sound-open-firmware

./: .gitignore  Makefile.am  build-all.sh  configure.ac
scripts/: checkpatch.pl  xtensa-build-all.sh
src/: Makefile.am
src/arch/host/: Makefile.am  init.c  main.c
src/arch/host/include/arch/: cache.h  interrupt.h  spinlock.h  timer.h
src/arch/xtensa/: Makefile.am
src/arch/xtensa/include/arch/: task.h
src/audio/: Makefile.am  buffer.c  dai.c  host.c  mixer.c  pipeline.c  volume.c
src/drivers/: Makefile.am  dw-dma.c  hda-dma.c  host-vdma.c  host-vssp.c
src/drivers/intel/: dw-dma.c
src/drivers/intel/cavs/: hda-dma.c
src/include/reef/: dai.h  dma.h  host-ipc.h  host-vdma.h  host-vssp.h  interrupt.h
src/include/sof/: ipc.h  schedule.h  trace.h
src/include/sof/audio/: pipeline.h
src/include/uapi/: ipc.h
src/init/: init.c
src/ipc/: Makefile.am  apl-ipc.c  byt-ipc.c  handler.c  host-ipc.c  intel-ipc.c
src/lib/: alloc.c  schedule.c  trace.c
src/platform/: Makefile.am
src/platform/baytrail/include/platform/: trace.h
src/platform/host/: Makefile.am  clk.c  dai.c  dma.c  platform-byt.c  platform.c  timer.c
src/platform/host/include/platform/: debug.h  dma.h  memory.h  platform.h  pmc.h  shim.h  timer.h  trace.h
tools/topology/: sof-apl-nocodec.m4
